--- a/clock.html
+++ b/clock.html
@@ -5,30 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIGITAL CLOCK</title>
    <style>
-    body{background-color: red;
+    body{background-color:#222;
     }
     .Clock{
         font-size:65px ;
         color:#fff;
         text-align:center;
         margin-top:5%;
-        border :7px solid #f4d7c9;
-        padding:10px;
-        border-radius: 50px 10px;
-        border-style: inset;
-    
+        padding:auto;
+        border: 0;
     }
     #myTime{
-    font-size: 500%; 
+    font-size: 400%; 
     margin-top:10%;
-    margin-left:30%;
+    margin-left:23%;
+    }
+    .fox{
+    background-color: blueviolet;
+    margin-left: 200px;
+    margin-right: 200px;
     }
     
    </style>
 </head>
 <body>
-    <div id="myTime">The Time Is</div>
-    <div id="digitalClock" class="Clock"></div>
+    <div class="fox">
+        <div id="myTime">The Time Is</div>
+        <div id="digitalClock" class="Clock"></div>
+    </div>
     <script type="text/javascript">
         function showTime()
             {
