--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -40,8 +40,8 @@
           </p>
           <div class="btn-con">
             <a
-              href="Shedrach Uzoigwe CV.pdf"
-              download="Shedrach Uzoigwe CV.pdf"
+              href="portfolio/ShedrachMorrisUzoigweResume.pdf"
+              download="portfolio/ShedrachMorrisUzoigweResume.pdf"
               class="main-btn"
             >
               <span class="btn-text">Download CV</span>
@@ -76,8 +76,8 @@
             </p>
             <div class="btn-con">
               <a
-                href="Shedrach Uzoigwe CV.pdf"
-                download="Shedrach Uzoigwe CV.pdf"
+                href="portfolio/ShedrachMorrisUzoigweResume.pdf"
+                download="portfolio/ShedrachMorrisUzoigweResume.pdf"
                 class="main-btn"
               >
                 <span class="btn-text">Download CV</span>
@@ -489,7 +489,7 @@
                     <span>Education</span>
                   </div>
                   <p>
-                    <span>: Dominion Secondary School</span>
+                    <span>: Dalewares Institute Of Technology</span>
                   </p>
                 </div>
                 <div class="contact-item">
