media-query update

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -58,7 +58,7 @@
         </div>
         <div class="about-container">
           <div class="left-about">
-            <h4>Information About me</h4>
+            <h4>Information About Me</h4>
             <p>
               Hello there! I'm Shedrach Morris Uzoigwe, a results-driven web
               developer residing in Lagos State, Nigeria. My passion for
