pogress bar update

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -140,7 +140,7 @@
             <div class="progress-bar">
               <p class="prog-title">html5</p>
               <div class="progress-con">
-                <p class="prog-text">70%</p>
+                <p class="prog-text">90%</p>
                 <div class="progress">
                   <span class="html"></span>
                 </div>
@@ -149,7 +149,7 @@
             <div class="progress-bar">
               <p class="prog-title">css3</p>
               <div class="progress-con">
-                <p class="prog-text">50%</p>
+                <p class="prog-text">80%</p>
                 <div class="progress">
                   <span class="css"></span>
                 </div>
@@ -158,7 +158,7 @@
             <div class="progress-bar">
               <p class="prog-title">javascript</p>
               <div class="progress-con">
-                <p class="prog-text">55%</p>
+                <p class="prog-text">75%</p>
                 <div class="progress">
                   <span class="js"></span>
                 </div>
@@ -167,18 +167,18 @@
             <div class="progress-bar">
               <p class="prog-title">ReactJS</p>
               <div class="progress-con">
-                <p class="prog-text">40%</p>
+                <p class="prog-text">60%</p>
                 <div class="progress">
                   <span class="react"></span>
                 </div>
               </div>
             </div>
             <div class="progress-bar">
-              <p class="prog-title">NodeJS</p>
+              <p class="prog-title">TailwindCSS</p>
               <div class="progress-con">
-                <p class="prog-text">40%</p>
+                <p class="prog-text">60%</p>
                 <div class="progress">
-                  <span class="node"></span>
+                  <span class="TailwindCSS"></span>
                 </div>
               </div>
             </div>
